Fix some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1126,10 +1126,6 @@ label {
     margin-bottom: 2rem;
 }
 
-.about-info-text a {
-    margin-bottom: 2rem;
-}
-
 .about-img {
     float: left;
 }
